Finished Assignment 2 Data mining

--- a/Assignment2/hw2_DataMining.Rmd
+++ b/Assignment2/hw2_DataMining.Rmd
@@ -315,3 +315,48 @@ test_error_pls
 ```
 (g). Comment on the results obtained. How accurately can we predict the number of college applications received? Is there much difference among the test errors resulting from these five approaches?
 
+```{r}
+lm_test_r2 <- 1 - test_error_least_square / mean((data_test[, 'Apps'] - mean(data_test[, 'Apps']))^2)
+ridge_test_r2 <- 1 - test_error_ridge / mean((data_test[, 'Apps'] - mean(data_test[, 'Apps']))^2)
+lasso_test_r2 <- 1 - test_error_lasso / mean((data_test[, 'Apps'] - mean(data_test[, 'Apps']))^2)
+pcr_test_r2 <- 1 - test_error_pcr / mean((data_test[, 'Apps'] - mean(data_test[, 'Apps']))^2)
+pls_test_r2 <- 1 - test_error_pls / mean((data_test[, 'Apps'] - mean(data_test[, 'Apps']))^2)
+```
+**OLS**
+```{r}
+cat("Test Error:", test_error_least_square, "\n")
+cat("R squared:", lm_test_r2)
+```
+
+**Ridge**
+```{r}
+cat("Test Error:", test_error_ridge, "\n")
+cat("R squared:", ridge_test_r2)
+```
+**Lasso**
+```{r}
+cat("Test Error:", test_error_lasso, "\n")
+cat("R squared:", lasso_test_r2)
+```
+
+**PCR**
+```{r}
+cat("Test Error:", test_error_pcr, "\n")
+cat("R squared:", pcr_test_r2)
+```
+
+
+**PLS**
+```{r}
+cat("Test Error:", test_error_pls, "\n")
+cat("R squared:", pls_test_r2)
+```
+
+
+**Discussion:**
+**All the models have similar test error.**
+**With regards to R squared, all the models produced similar values close to 1.**
+**Surprisingly, PCR had significantly lower R_squared then the rest and unsurprisingly,**
+**Ridge had the highest**
+**All models could be used to accurately predict college applications**
+
